# redbasic

./: .gitignore  CMakeLists.txt  error.cpp  error.hpp  grammar.txt  main.cpp  test.bas
ast/: assignnode.cpp  assignnode.hpp  ast.hpp  astnode.hpp  binopnode.cpp  binopnode.hpp  inputnode.cpp  inputnode.hpp  printnode.cpp  printnode.hpp  valuenode.cpp  valuenode.hpp
lexer/: lexer.cpp  lexer.hpp
parser/: parser.cpp  parser.hpp
vm/: scope.cpp  scope.hpp  value.cpp  value.hpp  var.cpp  var.hpp  vm.cpp  vm.hpp
